# CSQAQ

./: .env.example  .gitignore  pyproject.toml
docs/: PROBLEMS.md  TODO.md
docs/superpowers/plans/: 2026-03-17-csqaq-phase1-infrastructure-item-analysis.md  2026-03-18-phase2-market-scout-router-plan.md  2026-03-19-phase3-ta-parallel-hitl-scout-plan.md  2026-03-20-inventory-trend-analysis-plan.md  (+1 more)
src/csqaq/: config.py  main.py
tests/: conftest.py  test_e2e.py
tests/fixtures/: chart_response.json  home_data_response.json  index_kline_response.json  item_detail_response.json  kline_response.json  page_list_response.json  rank_list_response.json  statistic_response.json  sub_data_response.json  suggest_response.json  vol_data_response.json
tests/test_api/: conftest.py  test_health.py
tests/test_components/: test_advisor_output.py  test_inventory_agent.py  test_item_ta.py  test_item_tools.py  test_market_agent.py  test_market_ta.py  test_model_factory.py  test_router.py  test_rules.py  test_scout_agent.py  test_scout_multi_dimension.py
tests/test_flows/: test_advisor_flow.py  test_hitl_gate.py  test_inventory_flow.py  test_item_flow.py  test_market_flow.py  test_parallel_item_flow.py  test_router_flow.py  test_scout_flow.py
tests/test_infrastructure/: test_cache.py  test_config.py  test_csqaq_client.py  test_database.py  test_index_kline.py  test_indicators.py  test_inventory_schemas.py  test_item_endpoints.py  test_market_endpoints.py  test_market_schemas.py  test_rank_endpoints.py  test_rank_schemas.py  test_schemas.py  test_vol_endpoints.py
(+55 files in other folders)
